--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -2,38 +2,287 @@
   max-width: initial;
 }
 
-h1 {
-  color: red;
+img[alt="build workflow"] {
+    padding: 0px;
+    line-height: 0;
+    border-radius: 0px;
+    margin: 0;
+    max-width: 70%;
+    display: inline-block;
 }
 
-th, td {
-    border: 1px solid var(--md-typeset-table-color);
-    border-spacing: 0;
-    border-bottom: none;
-    border-left: none;
-    border-top: none;
+img[alt="Docker-Multi-Arch"] {
+    padding: 0px;
+    line-height: 0;
+    border-radius: 0px;
+    margin: 0;
+    max-width: 70%;
+    display: inline-block;
 }
 
-.md-typeset__table {
-    line-height: 1;
+
+img[alt="simple workflow"] {
+    padding: 0px;
+    line-height: 0;
+    border-radius: 0px;
+    margin: 0;
+    max-width: 70%;
+    display: inline-block;
 }
 
-.md-typeset__table table:not([class]) {
-    font-size: .74rem;
-    border-right: none;
+img[alt="Sanity-CI-Ubuntu-22"] {
+    padding: 0px;
+    line-height: 0;
+    border-radius: 0px;
+    margin: 0;
+    max-width: 70%;
+    display: inline-block;
 }
 
-.md-typeset__table table:not([class]) td,
-.md-typeset__table table:not([class]) th {
-    padding: 9px;
+img[alt="tcp-lb-sanity-CI"] {
+    padding: 0px;
+    line-height: 0;
+    border-radius: 0px;
+    margin: 0;
+    max-width: 70%;
+    display: inline-block;
 }
 
-/* light mode alternating table bg colors */
-.md-typeset__table tr:nth-child(2n) {
-    background-color: #f8f8f8;
+img[alt="udp-lb-sanity-CI"] {
+    padding: 0px;
+    line-height: 0;
+    border-radius: 0px;
+    margin: 0;
+    max-width: 70%;
+    display: inline-block;
 }
 
-/* dark mode alternating table bg colors */
-[data-md-color-scheme="slate"] .md-typeset__table tr:nth-child(2n) {
-    background-color: hsla(var(--md-hue),25%,25%,1)
+img[alt="sctp-lb-sanity-CI"] {
+    padding: 0px;
+    line-height: 0;
+    border-radius: 0px;
+    margin: 0;
+    max-width: 70%;
+    display: inline-block;
+}
+
+img[alt="ipsec-sanity-CI"] {
+    padding: 0px;
+    line-height: 0;
+    border-radius: 0px;
+    margin: 0;
+    max-width: 70%;
+    display: inline-block;
+}
+
+img[alt="extlb workflow"] {
+    padding: 0px;
+    line-height: 0;
+    border-radius: 0px;
+    margin: 0;
+    max-width: 70%;
+    display: inline-block;
+}
+
+img[alt="nat66-sanity-CI"] {
+    padding: 0px;
+    line-height: 0;
+    border-radius: 0px;
+    margin: 0;
+    max-width: 70%;
+    display: inline-block;
+}
+
+img[alt="Scale-Sanity-CI-Ubuntu-22"] {
+    padding: 0px;
+    line-height: 0;
+    border-radius: 0px;
+    margin: 0;
+    max-width: 70%;
+    display: inline-block;
+}
+
+img[alt="scale-sanity-CI"] {
+    padding: 0px;
+    line-height: 0;
+    border-radius: 0px;
+    margin: 0;
+    max-width: 70%;
+    display: inline-block;
+}
+
+img[alt="perf-CI"] {
+    padding: 0px;
+    line-height: 0;
+    border-radius: 0px;
+    margin: 0;
+    max-width: 70%;
+    display: inline-block;
+}
+
+img[alt="liveness-sanity-CI"] {
+    padding: 0px;
+    line-height: 0;
+    border-radius: 0px;
+    margin: 0;
+    max-width: 70%;
+    display: inline-block;
+}
+
+img[alt=K3s-Base-Sanity-CI] {
+    padding: 0px;
+    line-height: 0;
+    border-radius: 0px;
+    margin: 0;
+    max-width: 70%;
+    display: inline-block;
+}
+
+img[alt=K8s-Calico-Cluster-IPVS-CI] {
+    padding: 0px;
+    line-height: 0;
+    border-radius: 0px;
+    margin: 0;
+    max-width: 70%;
+    display: inline-block;
+}
+
+img[alt=EKS] {
+    padding: 0px;
+    line-height: 0;
+    border-radius: 0px;
+    margin: 0;
+    max-width: 70%;
+    display: inline-block;
+}
+
+img[alt=k3s-flannel-CI] {
+    padding: 0px;
+    line-height: 0;
+    border-radius: 0px;
+    margin: 0;
+    max-width: 70%;
+    display: inline-block;
+}
+
+img[alt=K8s-Calico-Cluster-IPVS2-CI] {
+    padding: 0px;
+    line-height: 0;
+    border-radius: 0px;
+    margin: 0;
+    max-width: 70%;
+    display: inline-block;
+}
+
+img[alt=k3s-flannel-ubuntu22-CI] {
+    padding: 0px;
+    line-height: 0;
+    border-radius: 0px;
+    margin: 0;
+    max-width: 90%;
+    display: inline-block;
+}
+
+img[alt=K8s-Calico-Cluster-IPVS3-CI] {
+    padding: 0px;
+    line-height: 0;
+    border-radius: 0px;
+    margin: 0;
+    max-width: 70%;
+    display: inline-block;
+}
+
+img[alt=k3s-flannel-cluster-CI] {
+    padding: 0px;
+    line-height: 0;
+    border-radius: 0px;
+    margin: 0;
+    max-width: 90%;
+    display: inline-block;
+}
+
+img[alt=K8s-Calico-Cluster-IPVS3-HA-CI] {
+    padding: 0px;
+    line-height: 0;
+    border-radius: 0px;
+    margin: 0;
+    max-width: 70%;
+    display: inline-block;
+}
+
+img[alt=k3s-flannel-incluster-CI] {
+    padding: 0px;
+    line-height: 0;
+    border-radius: 0px;
+    margin: 0;
+    max-width: 90%;
+    display: inline-block;
+}
+
+img[alt=k3s-flannel-incluster-l2-CI] {
+    padding: 0px;
+    line-height: 0;
+    border-radius: 0px;
+    margin: 0;
+    max-width: 90%;
+    display: inline-block;
+}
+
+img[alt=k3s-calico-CI] {
+    padding: 0px;
+    line-height: 0;
+    border-radius: 0px;
+    margin: 0;
+    max-width: 70%;
+    display: inline-block;
+}
+
+img[alt=k3s-cilium-cluster-CI] {
+    padding: 0px;
+    line-height: 0;
+    border-radius: 0px;
+    margin: 0;
+    max-width: 80%;
+    display: inline-block;
+}
+
+img[alt=k3s-sctpmh-CI] {
+    padding: 0px;
+    line-height: 0;
+    border-radius: 0px;
+    margin: 0;
+    max-width: 70%;
+    display: inline-block;
+}
+
+img[alt=k3s-sctpmh-ubuntu22-CI] {
+    padding: 0px;
+    line-height: 0;
+    border-radius: 0px;
+    margin: 0;
+    max-width: 90%;
+    display: inline-block;
+}
+
+img[alt=k3s-sctpmh-2-CI] {
+    padding: 0px;
+    line-height: 0;
+    border-radius: 0px;
+    margin: 0;
+    max-width: 70%;
+    display: inline-block;
+}
+
+td:nth-child(odd) {
+    padding: 0px 0px 10px 10px;
+    margin: 0px;
+    width: 0px
+
+}
+
+td:nth-child(even) {
+    padding: 0px 0px 0px 0px;
+    margin: 0px;
+    width: 0px
+
 }
