--- a/overrides/partials/copyright.html
+++ b/overrides/partials/copyright.html
@@ -2,7 +2,7 @@
 <div class="md-copyright">
   {% if config.copyright %}
     <div class="md-copyright__highlight">
-      <a href="https://www.linuxfoundation.org/legal/trademark-usage">; Trademark Usage</a>
+      Copyright © LoxiLB Authors 2022-24 The Linux Foundation® (TLF) has registered trademarks and uses trademarks. For a list of TLF trademarks, see <a href="https://www.linuxfoundation.org/legal/trademark-usage">Trademark Usage</a>
     </div>
   {% endif %}
   {% if not config.extra.generator == false %}
